--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: rachidsakaraoo7@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Rachid Sakara, developer for web and mobile applications, member of Tuts+ translation team and for the meantime, I'm starting a whole brand new career as freelance writer, wish me luck!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://rachidsakara.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: rachid_sakara
 github_username:  rachidsakara
 
